--- a/index.html
+++ b/index.html
@@ -173,6 +173,64 @@
         </div>
       </section>
       <!-- facts section ends -->
+
+      <!-- sponsor section starts  -->
+
+      <section class="container">
+        <div class="sponsor-text">
+          <h1 class="sponsor-title">
+            Our Sponspors
+          </h1>
+          <p class="sponsor-description">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+        </div>
+        <div class="sponsor-icon-group">
+          <img src="images/sponsors/spotify.png" alt="">
+          <img src="images/sponsors/amazon.png" alt="">
+          <img src="images/sponsors/google.png" alt="">
+          <img src="images/sponsors/telerama.png" alt="">
+          <img src="images/sponsors/figma.png" alt="">
+        </div>
+      </section>
+      <!-- sponsor section ends -->
+
+      <!-- contact us section starts here  -->
+      <section class="container">
+        <h1 class="contact-headline">
+          Contact Us 
+        </h1>
+        <div class="contact">
+
+          <div class="contact-left-section">
+            <div class="contact-left-image">
+              <img src="images/icons/contact-us.svg" alt="">
+            </div>
+            <div class="contact-text">
+              
+              <h1 class="contact-description">
+                Need to get in Touch? 
+              </h1>
+              <p>Fill out the form with your inquiry.</p>
+              <button class="btn-primary">Explore More</button>
+            </div>
+          </div>
+          <div class="contact-form">
+            <form action="">
+              <label for="">Name</label>
+              <input type="text" name="" id="" placeholder="Your name">
+              <label for="">Contact No.</label>
+              <input type="tel" name="" id="" placeholder="Your contact no.">
+              <label for="">Email</label>
+              <input type="email" name="" id="" placeholder="Your Email address">
+              <label for="">Message</label>
+              <textarea name="" id="" cols="30" rows="10" placeholder="Yor Message here"></textarea>
+              <button type="submit" class="btn-primary">Send Message</button>
+  
+            </form>
+          </div>
+        </div>
+
+      </section>
+      <!-- contact us section ends here  -->
     </main>
   </body>
 </html>
