--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </div>
         <div class="nav-items">
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact Us</a></li>
-            <li><a href="">Login</a></li>
+            <li class="nav-item"><a href="">Home</a></li>
+            <li class="nav-item"><a href="">About</a></li>
+            <li class="nav-item"><a href="">Contact Us</a></li>
+            <li class="nav-item"><a href="">Login</a></li>
           </ul>
         </div>
       </nav>
@@ -223,7 +223,7 @@
               <input type="email" name="" id="" placeholder="Your Email address">
               <label for="">Message</label>
               <textarea name="" id="" cols="30" rows="10" placeholder="Yor Message here"></textarea>
-              <button type="submit" class="btn-primary">Send Message</button>
+              <button type="submit" class="btn-primary msg-btn">Send Message</button>
   
             </form>
           </div>
@@ -232,5 +232,10 @@
       </section>
       <!-- contact us section ends here  -->
     </main>
+    <footer>
+      <div class="footer container">
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+      </div>
+    </footer>
   </body>
 </html>
