half responsive dome

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <!------- banner section starts here------->
       <section class="container banner">
         <div class="banner-text">
-          <h1 class="banner-headline">Brand New Group of Architects</h1>
+          <h1 class="banner-headline">Brand New Group <br> of Architects</h1>
           <p class="banner-description">
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
@@ -128,15 +128,19 @@
                 </p>
               </div>
             </div>
-            <div class="floating-card-text">
+            <!-- <div class="floating-card-text">
               <h1>10+Year</h1>
               <p>Experience</p>
-            </div>
+            </div> -->
           </div>
 
           <div class="feature-image">
             <img src="images/architect.png" alt="" />
           </div>
+        </div>
+        <div class="floating-card-text">
+          <h1>10+Year</h1>
+          <p>Experience</p>
         </div>
       </section>
 
