--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
 
       <!-- contact us section starts here  -->
       <section class="container">
+        <hr class="hr">
         <h1 class="contact-headline">
           Contact Us 
         </h1>
