--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
       <!-- features items section  starts  -->
 
-      <section class="container">
+      <section class="container feature">
         <div class="feature-section">
           <div class="feature-text">
             <h1 class="features-items-headline">
